# riscv-assembler

./: dune-project  riscv-assembler.opam
_build/: .db  .digest-db  log
_build/default/: riscv-assembler.dune-package  riscv-assembler.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: riscv_assembler.cma  riscv_assembler.cmxa  riscv_assembler.cmxs
_build/default/lib/.merlin-conf/: lib-riscv_assembler
_build/default/lib/.riscv_assembler.objs/byte/: riscv_assembler.cmi  riscv_assembler.cmo  riscv_assembler.cmt
_build/default/lib/.riscv_assembler.objs/native/: riscv_assembler.cmx
_build/default/test/.merlin-conf/: exe-test_riscv_assembler
_build/default/test/.test_riscv_assembler.eobjs/byte/: dune__exe__Test_riscv_assembler.cmi  dune__exe__Test_riscv_assembler.cmti
_build/default/test/.test_riscv_assembler.eobjs/native/: dune__exe__Test_riscv_assembler.cmx
_build/install/default/lib/riscv-assembler/: META  dune-package  opam
lib/: dune
test/: dune
